Fix multiple warnings shown by IDE
Convert callbacks into lambda
Migrate java API to use List.copyOf in ShadowLegacyMatrix.java